--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!doctype html>
-hello world
+<html class="no-js" lang="en" dir="ltr">
+  <head>
+  </head>
 
+<body>
 
+<h2>hello world</h2>
+
+<main>
+	
+
+</main>
+
+</body>
+
+<footer></footer>
 </html>
