--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!doctype html>
-<html class="no-js" lang="en" dir="ltr">
-  <head>
-  </head>
+	<html class="no-js" lang="en" dir="ltr">
+  		<head>
+  		</head>
+  		
+  	<nav>
+  			
+  	</nav>
 
-<body>
+	<body>
 
-<h2>hello world</h2>
+		<h1>hello world</h1>
 
-<main>
-	
+		<main>
+			<section></section>
+			<section></section>
 
-</main>
+		</main>
 
-</body>
+	</body>
 
 <footer></footer>
 </html>
