--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 		<h1>hello world</h1>
 
 		<main>
-			<section></section>
+			<section>
+				<p></p>
+				<span></span>
+				<div></div>
+				
+
+			</section>
 			<section></section>
 
 		</main>
