--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 	<body>
 
-		<h1>hello world</h1>
+		<h1>hello world!</h1>
 
 		<main>
 			<section>
 				<p></p>
 				<span></span>
 				<div></div>
-				
+
 
 			</section>
 			<section></section>
