--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 				<p></p>
 				<span></span>
 				<div></div>
+				<div></div>
+
+				<p>This Missourian special section explores the latest innovations in small businesses around Missouri. Read more here or pick up a copy of the print edition at an MU Extension office.</p>
 
 
 			</section>
