--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 	<html class="no-js" lang="en" dir="ltr">
   		<head>
+  			<title>Assignment One</title>
   		</head>
   		
   	<nav>
@@ -9,7 +10,7 @@
 
 	<body>
 
-		<h1>hello world!</h1>
+		<h1>Assignment One Title</h1>
 
 		<main>
 			<section>
