--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 	<body>
 
 		<h1>Assignment One Title</h1>
+		<a href="mailto:fake.email@edu.org"><img src="img/example.jpg"></a>
 
 		<main>
 			<section>
+				<ul>
+					<li>1</li>
+					<li>2</li>
+					<li>3</li>
+					<li>4</li>
+					<li>5</li>
+				</ul>
+
+
 				<p></p>
 				<span></span>
 				<div></div>
