--- a/index.html
+++ b/index.html
@@ -5,34 +5,38 @@
   		</head>
   		
   	<nav>
-  			
+  			<a href="https://umsystem.instructure.com/courses/215338/assignments/2277180">Website assignment One</a>
+  			<a href="https://williamlager.com/">wlager.com</a>
+  			<a href="gallery.html">Gallery</a>
   	</nav>
 
 	<body>
 
 		<h1>Assignment One Title</h1>
-		<a href="mailto:fake.email@edu.org"><img src="img/example.jpg"></a>
+		
+		<a href="mailto:fake.email@edu.org"><img src="img/frosted-leaf.jpg"></a>
 
 		<main>
 			<section>
 				<ul>
-					<li>1</li>
-					<li>2</li>
-					<li>3</li>
-					<li>4</li>
-					<li>5</li>
+					<li><a href="">List item One</a></li>
+					<li><a href="">List item Two</a></li>
+					<li><a href="">List item Three</a></li>
+					<li><a href="">List item Four</a></li>
+					<li><a href="">List item Five</a></li>
 				</ul>
 
 
-				<p></p>
+				<p>This is a paragraph of text. This can be three or four sentences of text that descries something. It could even be a caption for your image. Following AP style.</p>
 				<span></span>
 				<div></div>
 				<div></div>
 
-				<p>This Missourian special section explores the latest innovations in small businesses around Missouri. Read more here or pick up a copy of the print edition at an MU Extension office.</p>
+				<p></p>
 
 
 			</section>
+
 			<section></section>
 
 		</main>
