--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<main>
 			<section>
 				<ul>
-					<li><a href="">List item One</a></li>
-					<li><a href="">List item Two</a></li>
+					<li><a href="">List item One6</a></li>
+					<li><a href="">List item Two5</a></li>
 					<li><a href="">List item Three</a></li>
 					<li><a href="">List item Four</a></li>
 					<li><a href="">List item Five</a></li>
