--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 		<h1>Assignment One Title</h1>
 		
-		<a href="mailto:fake.email@edu.org"><img src="img/frosted-leaf.jpg"></a>
+		<a href="mailto:fake.email@edu.org">
+			<img src="img/frosted-leaf.jpg"></a>
 
 		<main>
 			<section>
