--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<h1>Assignment One Title</h1>
 		
-		<a href="mailto:fake.email@edu.org">
+		<a href="mailto:lawmv7@umsystem.edu">
 			<img src="img/frosted-leaf.jpg"></a>
 
 		<main>
