--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!doctype html>
 	<html class="no-js" lang="en" dir="ltr">
   		<head>
-  			<title>Assignment One</title>
+  			<title>Lydia Williams Website</title>
   		</head>
   		
   	<nav>
   			<a href="https://umsystem.instructure.com/courses/215338/assignments/2277180">Website assignment One</a>
-  			<a href="https://williamlager.com/">wlager.com</a>
+  			<a href="https://www.linkedin.com/in/lydia-williams-4b8924234/">linkedin</a>
   			<a href="gallery.html">Gallery</a>
   	</nav>
 
 	<body>
 
-		<h1>Assignment One Title</h1>
+		<h1>Lydia Williams Website</h1>
 		
 		<a href="mailto:lawmv7@umsystem.edu">
-			<img src="img/frosted-leaf.jpg"></a>
+			<img src="img/pink-flower.jpg"></a>
 
 		<main>
 			<section>
@@ -28,7 +28,7 @@
 				</ul>
 
 
-				<p>This is a paragraph of text. This can be three or four sentences of text that descries something. It could even be a caption for your image. Following AP style.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<span></span>
 				<div></div>
 				<div></div>
