--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h1>Lydia Williams Website</h1>
 		
 		<a href="mailto:lawmv7@umsystem.edu">
-			<img src="img/pink-flower.jpg" width="5" height="5"></a>
+			<img src="img/pink-flower.jpg" width=".5" height=".5"></a>
 
 		<main>
 			<section>
