--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<html class="no-js" lang="en" dir="ltr">
   		<head>
   			<title>Lydia Williams Website</title>
+  			<link rel="stylesheet" href="css/example.css" media="all">
   		</head>
   		
   	<nav>
@@ -15,7 +16,7 @@
 		<h1>Lydia Williams Website</h1>
 		
 		<a href="mailto:lawmv7@umsystem.edu">
-			<img src="img/pink-flower.jpg" width=".10" height=".10"></a>
+			<img src="img/pink-flower.jpg"></a>
 
 		<main>
 			<section>
