--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 	<html class="no-js" lang="en" dir="ltr">
   		<head>
   			<title>Lydia Williams Website</title>
-  			<link rel="stylesheet" href="css/example.css" media="all">
+  			<link rel="preconnect" href="https://fonts.googleapis.com">
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
   		</head>
   		
   	<nav>
