--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
-			.dm-serif display-regular {
-  			<font-family: "DM Serif Display", serif;
-  			font-weight: 400;
-  			font-style: normal;/>
-			}
-
+			<style type="text/css">
+				.black-text {
+					color:black;
+				}
+				h2 {
+					font-family:DM+Serif+Display:ital;
+				}
+				p {
+					font-size: 40px;
+				}
+			</style>
   		</head>
   		
   	<nav>
