--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 					color:black;
 				}
 				h2 {
-					font-family:DM+Serif+Display:ital;
+					font-family:DM+Serif+Display
 				}
 				p {
 					font-size: 40px;
