--- a/index.html
+++ b/index.html
@@ -28,8 +28,22 @@
 
 	<body>
 
-		<h1>Lydia Williams Website</h1>
-		
+		<h1>Lydia Williams Website
+			<p align="center">
+  				<link rel="preconnect" href="https://fonts.googleapis.com">
+				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+				<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
+				<style type="text/css">
+					.black-text {
+						color:black;
+					}
+					h2 {
+						font-family:DM+Serif+Display
+					}
+					p {
+						font-size: 50px;
+					}
+				</h1>
 		<a href="mailto:lawmv7@umsystem.edu">
 			<img src="img/pink-flower.jpg"></a>
 
