--- a/index.html
+++ b/index.html
@@ -1,23 +1,7 @@
 <!doctype html>
 	<html class="no-js" lang="en" dir="ltr">
   		<head>
-  			<title>Lydia Williams Website
-  				<p align="center">
-  				<link rel="preconnect" href="https://fonts.googleapis.com">
-				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-				<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
-				<style type="text/css">
-					.black-text {
-						color:black;
-					}
-					h2 {
-						font-family:DM+Serif+Display
-					}
-					p {
-						font-size: 20px;
-					}
-				</style>
-			</title>
+  			<title>Lydia Williams Website</title>
   		</head>
   		
   	<nav>
@@ -28,22 +12,8 @@
 
 	<body>
 
-		<h1>Lydia Williams Website
-			<p align="center">
-  				<link rel="preconnect" href="https://fonts.googleapis.com">
-				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-				<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
-				<style type="text/css">
-					.black-text {
-						color:black;
-					}
-					h2 {
-						font-family:DM+Serif+Display
-					}
-					p {
-						font-size: 50px;
-					}
-				</h1>
+		<h1>Lydia Williams Website</h1>
+		
 		<a href="mailto:lawmv7@umsystem.edu">
 			<img src="img/pink-flower.jpg"></a>
 
