--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   		<head>
   			<title>Lydia Williams Website
   				<p align="center">
+  				<link rel="stylesheet" href="css/example.css" media="all">
   				<link rel="preconnect" href="https://fonts.googleapis.com">
 				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 				<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
