--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   			<link rel="stylesheet" href="css/example.css" media="all">
   			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1,9..40,100..1000&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   		</head>
   		
   	<nav>
