--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 
 	<body>
 
-		<h1>Lydia Williams Website
-			<link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
-		</h1>
+		<h1>Lydia Williams Website</h1>
 		
 		<a href="mailto:lawmv7@umsystem.edu">
 			<img src="img/pink-flower.jpg"></a>
