--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   		<head>
   			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pontano+Sans:wght@300..700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Pontano+Sans:wght@300..700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
   			<link rel="stylesheet" href="css/example.css" media="all">
 			<title>Lydia Williams Website</title>
   		</head>
   		
   	<nav>
-  			<a href="https://umsystem.instructure.com/courses/215338/assignments/2277180">Website assignment One</a>
-  			<a href="https://www.linkedin.com/in/lydia-williams-4b8924234/">linkedin</a>
-  			<a href="gallery.html">Gallery</a>
+  			<a href="https://umsystem.instructure.com/courses/215338/assignments/2277180">Website assignment One </a>
+  			<a href="https://www.linkedin.com/in/lydia-williams-4b8924234/">linkedin </a>
+  			<a href="gallery.html">Gallery </a>
   	</nav>
 
 	<body>
