--- a/index.html
+++ b/index.html
@@ -47,4 +47,6 @@
 		</main>
 
 	</body>
+
+	<footer><span class="copyright"><a href="https://lydia-williams-4b8924234.com">copyright 2024 Lydia Williams</a></footer>
 </html>
