--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 		
 		<a href="mailto:lawmv7@umsystem.edu">
 			<img src="img/pink-flower.jpg"></a>
+			<footer>
+    		<img src="pink-flower.jpg" alt="Pink Flower" class="medium-image">
+</footer>
+
 
 		<main>
 			<section>
