--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   			<link rel="stylesheet" href="css/example.css" media="all">
 			<title>Lydia Williams Website</title>
   		</head>
-  		
+		<a class="skip-link" href="#content">Skip to content</a>
   	<nav>
   			<a href="https://umsystem.instructure.com/courses/215338/assignments/2277180"> Website assignment One </a>
   			<a href="https://www.linkedin.com/in/lydia-williams-4b8924234/"> linkedin </a>
-  			<a href="gallery.html"> Gallery </a>
+  			<a href="gallery.html">Gallery</a>
+			<a href="list.html">Books</a>
+		        <a href="photogallery.html">Photos</a>
   	</nav>
 
 	<body>
@@ -36,7 +38,7 @@
 				</ul>
 
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>This website will discuss books and food.</p>
 				<span></span>
 				<div></div>
 				<div></div>
