--- a/list.html
+++ b/list.html
@@ -6,3 +6,85 @@
 			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Pontano+Sans:wght@300..700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
   			<link rel="stylesheet" href="css/example.css" media="all">
     </head>
+
+	  <nav>
+		  <a href="index.html">Home</a>
+		  <a href="list.html">Books</a>
+		  <a href="photogallery.html">Gallery</a>
+	  </nav>
+
+	  
+	  <body> 
+		  <h1>10 Books That Are Retellings of Grimm Fairy Tales</h1>
+		  <p>As someone who loves stories, I am especially fascinated by fairytales. I find it particularly fascinating when modern authors draw on tales from centuries ago. Here are my top 10 favorite retellings of Grimm Fairy Tales.</p>
+
+		  <main> 
+			  <section>
+				  <ul>
+			<div class="list-item">
+				<h2>1.A Curse So Dark And Lonely</h2>
+			<div class="list-image"><img src="img/a-curse-so-dark-and-lonely.jpg">
+			</div>
+			</div>
+					  
+			<div class="list-item">
+				<h2>2.cinder</h2>
+			<div class="list-image"><img src="img/cinder.jpg">
+			</div>
+			</div>
+
+			<div class="list-item">
+				<h2>3.Ella Enchanted</h2>
+			<div class="list-image"><img src="img/ella-enchanted.jpg">
+			</div>
+			</div>
+
+			<div class="list-item">
+				<h2>4.Girl Serpent Thorn</h2>
+			<div class="list-image"><img src="img/girl-serpent-thorn.jpg">
+			</div>
+			</div>
+				
+			<div class="list-item">
+				<h2>5.House of Salt and Sorrow</h2>
+			<div class="list-image"><img src="img/house-or-salt-and-sorrow.jpg">
+			</div>
+			</div>
+
+			<div class="list-item">
+				<h2>6.Little Thieves</h2>
+			<div class="list-image"><img src="img/little-thieves.jpg">
+			</div>
+			</div>
+
+			<div class="list-item">
+				<h2>7.Spinning Silver</h2>
+			<div class="list-image"><img src="img/spinning-silver.jpg">
+			</div>
+			</div>
+
+			<div class="list-item">
+				<h2>8.The Fairy Tale Detectives</h2>
+			<div class="list-image"><img src="img/the-fairy-tale-detectives.jpg">
+			</div>
+			</div>
+
+			<div class="list-item">
+				<h2>9.The Hazel Wood</h2>
+			<div class="list-image"><img src="img/the-hazel-wood.jpg">
+			</div>
+			</div>
+
+			<div class="list-item">
+				<h2>10.The Wishing Spell</h2>
+			<div class="list-image"><img src="img/the-wishing-spell.jpg">
+			</div>
+			</div>
+				  </ul>
+			  </section>
+		  </main>
+
+	  </body>
+
+	<footer>Lydia Williams Inc.</footer>
+  </html</html>
