--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   			<a href="https://www.linkedin.com/in/lydia-williams-4b8924234/"> linkedin </a>
   			<a href="gallery.html">Gallery</a>
 			<a href="list.html">Books</a>
+			<a href="restaurantlist.html">Food</a>
 		        <a href="photogallery.html">Photos</a>
   	</nav>
 
