--- a/list.html
+++ b/list.html
@@ -10,6 +10,7 @@
 	  <nav>
 		  <a href="index.html">Home</a>
 		  <a href="list.html">Books</a>
+		  <a href="restaurantlist.html">Food</a>
 		  <a href="photogallery.html">Gallery</a>
 	  </nav>
 
