--- a/photogallery.html
+++ b/photogallery.html
@@ -1,1 +1,29 @@
+<!doctype html>
+	<html class="no-js" lang="en" dir="ltr">
+		<head>
+			<link rel="preconnect" href="https://fonts.googleapis.com">
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Pontano+Sans:wght@300..700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
+  		</head>
+		<a class="skip-link" href="#content">Skip to content</a>
 
+	<nav> 
+		<a href="https://umsystem.instructure.com/courses/215338/assignments/2277180"> Website assignment One </a>
+  		<a href="https://www.linkedin.com/in/lydia-williams-4b8924234/"> linkedin </a>
+  		<a href="gallery.html">Gallery</a>
+		<a href="list.html">Books</a>
+		<a href="restaurantlist.html">Food</a>
+		<a href="photogallery.html">Photos</a>
+
+	</nav>
+
+	<main id="content">
+
+		<div class="gallery-home">
+			<div class="gallery-section">
+		<section class="gallery-example">
+
+			<h1>Traveling the World</h1>
+			<p>I love exploring the outdoors and getting to travel to unique places around the world. Here are some photos from some of my favorite places I've traveled to.</p>
+
+			
