--- a/photogallery.html
+++ b/photogallery.html
@@ -10,7 +10,6 @@
 	<nav> 
 		<a href="https://umsystem.instructure.com/courses/215338/assignments/2277180"> Website assignment One </a>
   		<a href="https://www.linkedin.com/in/lydia-williams-4b8924234/"> linkedin </a>
-  		<a href="gallery.html">Gallery</a>
 		<a href="list.html">Books</a>
 		<a href="restaurantlist.html">Food</a>
 		<a href="photogallery.html">Photos</a>
@@ -26,4 +25,60 @@
 			<h1>Traveling the World</h1>
 			<p>I love exploring the outdoors and getting to travel to unique places around the world. Here are some photos from some of my favorite places I've traveled to.</p>
 
-			
+<div class="button_holder">
+      <button id="button_previous" class="button-start">&#9664; Previous</button>
+      <p id="stepper"></p>
+      <button id="button_next">Next &#9654;</button>
+    </div>
+
+    <figure class="gallery-image hideThis">
+
+    	<img src="img/photogallery/antelope-canyon.jpg" alt="Family Kayaking Trip">
+    	<figcaption>
+    		On a trip to see some national parks in Utah and Arizona, my family took a day to kayak through Antelope Canyon, a well known slot canyon with lots of narrow tunnels. 
+    	</figcaption>
+    </figure>
+
+    <figure class="gallery-image hideThis">
+
+    	<img src="img/photogallery/yellowstone.jpg" alt="Yellowstone Grand Canyon">
+    	<figcaption>
+    		This is a photo of me in front of the Grand Canyon of Yellowstone overlook. While it is a new canyon compared to some other ones, it was such a pretty view with vibrant colors and a large waterfall.
+    	</figcaption>
+    </figure>
+
+<figure class="gallery-image hideThis">
+
+    	<img src="img/photogallery/old-faithful.jpg" alt="Old Faithful">
+    	<figcaption>
+    		Also, on my trip to Yellowstone, we went to see Old Faithful multiple times. This photo is from an early morning trip as the sun was just rising.
+    	</figcaption>
+    </figure>
+
+    <figure class="gallery-image hideThis">
+
+    	<img src="img/photogallery/florence.jpg" alt="Pasta">
+    	<figcaption>
+    		This photo is from my trip to Florence, Italy last summer. We went to Osteria Pastella, which is a restuarant that is famous for melting the cheese for your pasta in a giant cheese wheel right at your table. 
+    	</figcaption>
+    </figure>
+
+    <figure class="gallery-image hideThis">
+
+    	<img src="img/photogallery/naxos.jpg" alt="Temple of Apollo">
+    	<figcaption>
+    		While in Naxos, Greece, I visited the ruins of the Temple of Apollo. It was a wonderful place to watch the sun set. 
+    	</figcaption>
+    </figure>
+</div>
+</div>
+</section>
+
+
+</main>
+
+</body>
+
+<footer>Lydia Williams Inc.</footer>
+<script src="js/photogalleryjs"></script>
+</html>
