--- a/restaurantlist.html
+++ b/restaurantlist.html
@@ -9,10 +9,11 @@
     
 <a class="skip-link" href="#content">Skip to content</a>
 	  <nav>
-		  <a href="index.html">Home</a>
-		  <a href="list.html">Books</a>
-		  <a href="restaurantlist.html">Food</a>
-		  <a href="photogallery.html">Gallery</a>
+		  <a href="https://umsystem.instructure.com/courses/215338/assignments/2277180"> Website assignment One </a>
+      <a href="https://www.linkedin.com/in/lydia-williams-4b8924234/"> linkedin </a>
+      <a href="list.html">Books</a>
+      <a href="restaurantlist.html">Food</a>
+      <a href="photogallery.html">Photos</a>
 	  </nav>
 
 <body>
