--- a/list.html
+++ b/list.html
@@ -2,17 +2,18 @@
   <html class="no-js"lang="en"dir="ltr">
     <head> 
       <link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Pontano+Sans:wght@300..700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet>
   			<link rel="stylesheet" href="css/example.css" media="all">
 	   		<link rel="stylesheet" href="css/list.css" media="all">
     </head>
 
 	  <nav>
-		  <a href="index.html">Home</a>
-		  <a href="list.html">Books</a>
-		  <a href="restaurantlist.html">Food</a>
-		  <a href="photogallery.html">Gallery</a>
+		  <a href="https://umsystem.instructure.com/courses/215338/assignments/2277180"> Website assignment One </a>
+        <a href="https://www.linkedin.com/in/lydia-williams-4b8924234/"> linkedin </a>
+      <a href="list.html">Books</a>
+      <a href="restaurantlist.html">Food</a>
+        <a href="photogallery.html">Photos</a>
 	  </nav>
 
 	  
