--- a/photogallery.html
+++ b/photogallery.html
@@ -1,9 +1,10 @@
 <!doctype html>
 	<html class="no-js" lang="en" dir="ltr">
 		<head>
+			<link rel="stylesheet" href="css/example.css" media="all">
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Pontano+Sans:wght@300..700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheeet>
   		</head>
 		<a class="skip-link" href="#content">Skip to content</a>
 
