--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet>
-  			<link rel="stylesheet" href="css/example.css" media="all">
+  			<link rel="stylesheet href="css/example.css" media="all">
 	   		<link rel="stylesheet" href="css/list.css" media="all">
     </head>
 
@@ -33,6 +33,9 @@
 			<div class="list-item">
 				<h2>2.cinder</h2>
 			<div class="list-image"><img src="img/cinder.jpg">
+        <p>Retelling of: Cinderella
+Summary: Humans and androids crowd the raucous streets of New Beijing. A deadly plague ravages the population. From space, a ruthless Lunar people watch, waiting to make their move. No one knows that Earth’s fate hinges on one girl. . . . Cinder, a gifted mechanic, is a cyborg. When her life becomes intertwined with the handsome Prince Kai’s, she suddenly finds herself at the center of an intergalactic struggle, and a forbidden attraction. Caught between duty and freedom, loyalty and betrayal, she must uncover secrets about her past in order to protect her world’s future.</p>
+
 			</div>
 			</div>
 
