--- a/list.html
+++ b/list.html
@@ -27,15 +27,16 @@
 			<div class="list-item">
 				<h2>1.A Curse So Dark And Lonely</h2>
 			<div class="list-image"><img src="img/a-curse-so-dark-and-lonely.jpg">
+        <p>Retelling of: Beauty and the Beast</p>
+        <p>Cursed by a powerful enchantress to repeat the autumn of his eighteenth year, Prince Rhen, the heir of Emberfall, thought he could be saved easily if a girl fell for him. But that was before he turned into a vicious beast hell-bent on destruction. Before he destroyed his castle, his family, and every last shred of hope. 
+        Nothing has ever been easy for Harper. With her father long gone, her mother dying, and her brother constantly underestimating her because of her cerebral palsy, Harper learned to be tough enough to survive. When she tries to save a stranger on the streets of Washington, DC, she's pulled into a magical world.</p>
 			</div>
 			</div>
 					  
 			<div class="list-item">
 				<h2>2.cinder</h2>
 			<div class="list-image"><img src="img/cinder.jpg">
-        <p>Retelling of: Cinderella
-
-        Summary: Humans and androids crowd the raucous streets of New Beijing. A deadly plague ravages the population. From space, a ruthless Lunar people watch, waiting to make their move. No one knows that Earth’s fate hinges on one girl. . . . Cinder, a gifted mechanic, is a cyborg. When her life becomes intertwined with the handsome Prince Kai’s, she suddenly finds herself at the center of an intergalactic struggle, and a forbidden attraction. Caught between duty and freedom, loyalty and betrayal, she must uncover secrets about her past in order to protect her world’s future.</p>
+        <p>Humans and androids crowd the raucous streets of New Beijing. A deadly plague ravages the population. From space, a ruthless Lunar people watch, waiting to make their move. No one knows that Earth’s fate hinges on one girl. . . . Cinder, a gifted mechanic, is a cyborg. When her life becomes intertwined with the handsome Prince Kai’s, she suddenly finds herself at the center of an intergalactic struggle, and a forbidden attraction. Caught between duty and freedom, loyalty and betrayal, she must uncover secrets about her past in order to protect her world’s future.</p>
 
 			</div>
 			</div>
