--- a/list.html
+++ b/list.html
@@ -34,8 +34,9 @@
 			</div>
 					  
 			<div class="list-item">
-				<h2>2.cinder</h2>
+				<h2>2.Cinder</h2>
 			<div class="list-image"><img src="img/cinder.jpg">
+        <p>Retelling of: Cinderalla</p>
         <p>Humans and androids crowd the raucous streets of New Beijing. A deadly plague ravages the population. From space, a ruthless Lunar people watch, waiting to make their move. No one knows that Earth’s fate hinges on one girl. . . . Cinder, a gifted mechanic, is a cyborg. When her life becomes intertwined with the handsome Prince Kai’s, she suddenly finds herself at the center of an intergalactic struggle, and a forbidden attraction. Caught between duty and freedom, loyalty and betrayal, she must uncover secrets about her past in order to protect her world’s future.</p>
 
 			</div>
@@ -44,48 +45,64 @@
 			<div class="list-item">
 				<h2>3.Ella Enchanted</h2>
 			<div class="list-image"><img src="img/ella-enchanted.jpg">
+        <p>Retelling of: Cinderella</p>
+        <p>At birth, Ella is inadvertently cursed by an imprudent young fairy named Lucinda, who bestows on her the "gift" of obedience. Anything anyone tells her to do, Ella must obey. Another girl might have been cowed by this affliction, but not feisty Ella: "Instead of making me docile, Lucinda's curse made a rebel of me. Or perhaps I was that way naturally." When her beloved mother dies, leaving her in the care of a mostly absent and avaricious father, and later, a loathsome stepmother and two treacherous stepsisters, Ella's life and well-being seem to be in grave peril. But her intelligence and saucy nature keep her in good stead as she sets out on a quest for freedom and self-discovery as she tries to track down Lucinda to undo the curse, fending off ogres, befriending elves, and falling in love with a prince along the way.</p>
 			</div>
 			</div>
 
 			<div class="list-item">
 				<h2>4.Girl Serpent Thorn</h2>
 			<div class="list-image"><img src="img/girl-serpent-thorn.jpg">
+        <p>Retelling of: Sleeping Beauty</p>
+        <p>There was and there was not, as all stories begin, a princess cursed to be poisonous to the touch. But for Soraya, who has lived her life hidden away, apart from her family, safe only in her gardens, it’s not just a story. As the day of her twin brother’s wedding approaches, Soraya must decide if she’s willing to step outside of the shadows for the first time. Below in the dungeon is a demon who holds knowledge that she craves, the answer to her freedom. And above is a young man who isn’t afraid of her, whose eyes linger not with fear, but with an understanding of who she is beneath the poison. Soraya thought she knew her place in the world, but when her choices lead to consequences she never imagined, she begins to question who she is and who she is becoming...human or demon. Princess or monster.</p>
 			</div>
 			</div>
 				
 			<div class="list-item">
 				<h2>5.House of Salt and Sorrow</h2>
 			<div class="list-image"><img src="img/house-or-salt-and-sorrow.jpg">
+        <p>Retelling of: The Twelve Dancing Princesses</p>
+        <p>Annaleigh lives a sheltered life at Highmoor, a manor by the sea, with her sisters, their father, and stepmother. Once they were twelve, but loneliness fills the grand halls now that four of the girls' lives have been cut short. Each death was more tragic than the last—the plague, a plummeting fall, a drowning, a slippery plunge—and there are whispers throughout the surrounding villages that the family is cursed by the gods. Disturbed by a series of ghostly visions, Annaleigh becomes increasingly suspicious that the deaths were no accidents. Her sisters have been sneaking out every night to attend glittering balls, dancing until dawn in silk gowns and shimmering slippers, and Annaleigh isn't sure whether to try to stop them or to join their forbidden trysts. Because who—or what—are they really dancing with? When Annaleigh's involvement with a mysterious stranger who has secrets of his own intensifies, it's a race to unravel the darkness that has fallen over her family—before it claims her next.</p>
 			</div>
 			</div>
 
 			<div class="list-item">
 				<h2>6.Little Thieves</h2>
 			<div class="list-image"><img src="img/little-thieves.jpg">
+        <p>Retelling of: The Goose Girl</p>
+        <p>Vanja Schmidt knows that no gift is freely given, not even a mother's love--and she's on the hook for one hell of a debt. Vanja, the adopted goddaughter of Death and Fortune, was Princess Gisele's dutiful servant up until a year ago. That was when Vanja's otherworldly mothers demanded a terrible price for their care, and Vanja decided to steal her future back... by stealing Gisele's life for herself. The real Gisele is left a penniless nobody while Vanja uses an enchanted string of pearls to take her place. Now, Vanja leads a lonely but lucrative double life as princess and jewel thief, charming nobility while emptying their coffers to fund her great escape. Then, one heist away from freedom, Vanja crosses the wrong god and is cursed to an untimely end: turning into jewels, stone by stone, for her greed. Vanja has just two weeks to figure out how to break her curse and make her getaway. And with a feral guardian half-god, Gisele's sinister fiancé, and an overeager junior detective on Vanja's tail, she'll have to pull the biggest grift yet to save her own life.</p>
 			</div>
 			</div>
 
 			<div class="list-item">
 				<h2>7.Spinning Silver</h2>
 			<div class="list-image"><img src="img/spinning-silver.jpg">
+        <p>Retelling of: Rumpelstiltskin</p>
+        <p>Miryem is the daughter and granddaughter of moneylenders, but her father's inability to collect his debts has left his family on the edge of poverty--until Miryem takes matters into her own hands. Hardening her heart, the young woman sets out to claim what is owed and soon gains a reputation for being able to turn silver into gold. Set on an impossible challenge by the nameless king, Miryem unwittingly spins a web that draws in a peasant girl, Wanda, and the unhappy daughter of a local lord who plots to wed his child to the dashing young tsar. But Tsar Mirnatius is not what he seems. And the secret he hides threatens to consume the lands of humans and Staryk alike. Torn between deadly choices, Miryem and her two unlikely allies embark on a desperate quest that will take them to the limits of sacrifice, power, and love.</p>
 			</div>
 			</div>
 
 			<div class="list-item">
 				<h2>8.The Fairy Tale Detectives</h2>
 			<div class="list-image"><img src="img/the-fairy-tale-detectives.jpg">
+        <p>Retelling of: Multiple Grimm Fairy Tales</p>
+        <p>For Sabrina and Daphne Grimm, life has not been a fairy tale. After the mysterious disappearance of their parents, the sisters are sent to live with their grandmother--a woman they believed was dead! Granny Relda reveals that the girls have two famous ancestors, the Brothers Grimm, whose classic book of fairy tales is actually a collection of case files of magical mischief. Now the girls must take on the family responsibility of being fairy tale detectives.</p>
 			</div>
 			</div>
 
 			<div class="list-item">
 				<h2>9.The Hazel Wood</h2>
 			<div class="list-image"><img src="img/the-hazel-wood.jpg">
+        <p>Retelling of: Multiple Grimm Fairy Tales</p>
+        <p>Seventeen-year-old Alice and her mother have spent most of Alice’s life on the road, always a step ahead of the uncanny bad luck biting at their heels. But when Alice’s grandmother, the reclusive author of a cult-classic book of pitch-dark fairy tales, dies alone on her estate, the Hazel Wood, Alice learns how bad her luck can really get: her mother is stolen away-by a figure who claims to come from the Hinterland, the cruel supernatural world where her grandmother's stories are set. Alice's only lead is the message her mother left behind: “Stay away from the Hazel Wood.” Alice has long steered clear of her grandmother’s cultish fans. But now she has no choice but to ally with classmate Ellery Finch, a Hinterland superfan who may have his own reasons for wanting to help her. To retrieve her mother, Alice must venture first to the Hazel Wood, then into the world where her grandmother's tales began―and where she might find out how her own story went so wrong.</p>
 			</div>
 			</div>
 
 			<div class="list-item">
 				<h2>10.The Wishing Spell</h2>
 			<div class="list-image"><img src="img/the-wishing-spell.jpg">
+        <p>Retelling of: Multiple Grimm Fairy Tales</p>
+        <p>Tells the tale of twins Alex and Conner. Through the mysterious powers of a cherished book of stories, they leave their world behind and find themselves in a foreign land full of wonder and magic where they come face-to-face with the fairy tale characters they grew up reading about.But after a series of encounters with witches, wolves, goblins, and trolls alike, getting back home is going to be harder than they thought.</p>
 			</div>
 			</div>
 				  </ul>
@@ -95,4 +112,4 @@
 	  </body>
 
 	<footer>Lydia Williams Inc.</footer>
-  </html</html>
+  </html>
