--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			<link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheeet>
 			<title>Lydia Williams Website</title>
   		</head>
-		<a class="skip-link" href="#content">Skip to content</a>
+		<a class="skip-link href="#content">Skip to content</a>
   	<nav>
   			<a href="https://umsystem.instructure.com/courses/215338/assignments/2277180"> Website assignment One </a>
   			<a href="https://www.linkedin.com/in/lydia-williams-4b8924234/"> linkedin </a>
