--- a/restaurantlist.html
+++ b/restaurantlist.html
@@ -8,7 +8,7 @@
   		
     </head>
     
-<a class="skip-link" href="#content">Skip to content</a>
+<a class="skip-link href="#content">Skip to content</a>
 	  <nav>
 		  <a href="https://umsystem.instructure.com/courses/215338/assignments/2277180"> Website assignment One </a>
       <a href="https://www.linkedin.com/in/lydia-williams-4b8924234/"> linkedin </a>
