--- a/photogallery.html
+++ b/photogallery.html
@@ -6,7 +6,7 @@
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheeet>
   		</head>
-		<a class="skip-link" href="#content">Skip to content</a>
+		<a class="skip-link href="#content">Skip to content</a>
 
 	<nav> 
 		<a href="https://umsystem.instructure.com/courses/215338/assignments/2277180"> Website assignment One </a>
