--- a/photogallery.html
+++ b/photogallery.html
@@ -81,5 +81,5 @@
 </body>
 
 <footer>Lydia Williams Inc.</footer>
-<script src="js/photogalleryjs"></script>
+<script src="js/photogallery.js"></script>
 </html>
