--- a/photogallery.html
+++ b/photogallery.html
@@ -34,7 +34,7 @@
 
     <figure class="gallery-image hideThis">
 
-    	<img src="img/photogallery/antelope-canyon.jpg" alt="Family Kayaking Trip">
+    	<img src="img/antelope-canyon.jpg" alt="Family Kayaking Trip">
     	<figcaption>
     		On a trip to see some national parks in Utah and Arizona, my family took a day to kayak through Antelope Canyon, a well known slot canyon with lots of narrow tunnels. 
     	</figcaption>
@@ -42,7 +42,7 @@
 
     <figure class="gallery-image hideThis">
 
-    	<img src="img/photogallery/yellowstone.jpg" alt="Yellowstone Grand Canyon">
+    	<img src="img/yellowstone.jpg" alt="Yellowstone Grand Canyon">
     	<figcaption>
     		This is a photo of me in front of the Grand Canyon of Yellowstone overlook. While it is a new canyon compared to some other ones, it was such a pretty view with vibrant colors and a large waterfall.
     	</figcaption>
@@ -50,7 +50,7 @@
 
 <figure class="gallery-image hideThis">
 
-    	<img src="img/photogallery/old-faithful.jpg" alt="Old Faithful">
+    	<img src="img/old-faithful.jpg" alt="Old Faithful">
     	<figcaption>
     		Also, on my trip to Yellowstone, we went to see Old Faithful multiple times. This photo is from an early morning trip as the sun was just rising.
     	</figcaption>
@@ -58,7 +58,7 @@
 
     <figure class="gallery-image hideThis">
 
-    	<img src="img/photogallery/florence.jpg" alt="Pasta">
+    	<img src="img/florence.jpg" alt="Pasta">
     	<figcaption>
     		This photo is from my trip to Florence, Italy last summer. We went to Osteria Pastella, which is a restuarant that is famous for melting the cheese for your pasta in a giant cheese wheel right at your table. 
     	</figcaption>
@@ -66,7 +66,7 @@
 
     <figure class="gallery-image hideThis">
 
-    	<img src="img/photogallery/naxos.jpg" alt="Temple of Apollo">
+    	<img src="img/naxos.jpg" alt="Temple of Apollo">
     	<figcaption>
     		While in Naxos, Greece, I visited the ruins of the Temple of Apollo. It was a wonderful place to watch the sun set. 
     	</figcaption>
